# Vulkan-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  No Engine.sln
No Engine/: No Engine.vcxproj  No Engine.vcxproj.filters  renderer.cpp  renderer.h
src/: buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  component_storage.hpp  component_type_db.hpp  component_type_db_init.hpp  components.hpp  device.cpp  device.hpp  ecs_registry.hpp  engine.cpp  engine.hpp  entity.hpp  glslc.sh  main.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.hpp  renderer_3d.cpp  renderer_3d.hpp  scene_graph.cpp  scene_graph.hpp  scene_render_target.cpp  scene_render_target.hpp  scene_view_panel.cpp  scene_view_panel.hpp  swap_chain.cpp  swap_chain.hpp  texture2d.cpp  texture2d.hpp  vertex.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window.cpp  (+1 more)
src/shaders/: compile.bat  default_shader.vert  default_shader.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  quad_shader.frag  quad_shader.frag.spv  quad_shader.vert  quad_shader.vert.spv
